style.css
:root {
    --abu: rgb(40, 40, 40);
    --abu1: rgb(60, 60,60);
    --bg: rgb(220, 220, 220);
    --bg1: rgb(180, 180, 180);
    --txt: white;
    --ijo: rgb(46, 192, 46);
}


* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: none;
  border: none;
  text-decoration: none;
  transition: 0.2s;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: var(--bg);
  color: black;
  /*min-height: 2000px;*/
}

/* Button */
.btn {
    background-color:green;
    padding: 7px 7px;
}

/* Navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.5rem 5%;
  background-color: rgb(40, 40, 40);
  top: 0;
  left: 0;
  right: 0;
  position: fixed;
}

.navbar .navbar-logo {
    font-size: 2rem;
    font-weight: 700;
    color: white;
}

.navbar .navbar-list a{
    color: white;
    margin: 0 7px;
    font-size: 1rem;
}

.navbar .navbar-list a:hover{
    color: gray;
}

.navbar .navbar-list .btn:hover {
    background-color: var(--ijo);
}

#menu {
    display: none;
    color:white;
    font-size: 2rem;
}

/* Main Section */
.main-section {
    min-height: 100vh;
    display: flex;
    align-items: center;
    background-image: url('assets/main-bg.jpg');
    background-repeat: none;
}

.main-section .content {
    padding: 1.4rem 7%;
    max-width: 60rem;
}

.main-section .content h1 {
    font-weight: 700;
    color: white;
    font-size: 4em;
    text-shadow: 1px 1px 3px rgba(1, 1, 3, 1);
    line-height: 1;
    margin-top: 4rem;
}

.main-section .content p {
    font-size: 1rem;
    margin-top: 1rem;
    color: white;
    line-height: 1.4;
    font-weight: 400;
}

.main-section .content .btn {
    padding: 1rem 3rem;
    color: white;
    margin-top: 2rem;
    display: inline-block;
    font-weight: 600;
    font-size: 1.1rem;


}

.main-section .content .btn:hover{
    background-color: var(--ijo);
}

/* About Section */
.about {
    padding: 8rem 7% 1.4rem;
    background-color: var(--bg1);
}


.about .row {
    display: flex;
}

.about .row .about-img {
    flex: 1 1 45rem;
}

.about .row .about-img img {
    width: 500px;
}

.about .row .content {
    flex: 1 1 500rem;
    padding: 0 1rem;
}

.about .row .content h3 {
    margin-bottom: 1rem;
    font-size: 1.8rem;
}
.about .row .content p {
    margin-bottom: 0.8rem;
    font-size: 1rem;
    line-height: 1.5;
    color: black;
}

/* List Section */
.list-section{
    padding: 7rem 7rem;
}
.list-section h2{
    font-size: 3em;
    font-weight: 700;
    text-align: center;
    margin-bottom: 3rem;
}
.list-section .box-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 30px;
}

.list-section .box-container .box{
    text-align: center;
    padding: 4rem;
    background-color: var(--txt);
}

.list-section .box-container .box .ctn{
    display: inline-block;
    background-color: var(--abu);
    margin-top:30px;
    padding: 10px 10px;
    border-radius: 5px;
    color: white;
}
.list-section .box-container .box .ctn:hover{
    background-color: var(--abu1);
    color: white;
}

.list-section .box-container .box:hover{
    box-shadow: 0 10px 15px rgba(150, 150, 150, 1);
}
/* Feature Section */
.feature {
    background-color: var(--bg1);
    padding: 7rem 7rem;
}
.feature .row {
    text-align: center;
}
.feature .row h3 {
    font-size: 2rem;
    font-weight: 700;
}

.feature .row p {
    padding: 0 5rem;
    font-size: 1rem;
}
.feature .box-container .box i {
    font-size: 5rem;
}
.feature .box-container{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
    gap: 10px;
}

.feature .box-container .box{
    text-align: left;
    padding: 3rem 1rem;
}

/* Contact */
.contact {
    padding: 7rem 7rem;
    text-align: center;
}

.contact h2{
    font-size: 3em;
    font-weight: 700;
}

.contact p {
    padding: 0 2rem;
    font-size: 1rem;
}
.contact .row {
    display: flex;
    margin-top: 4rem;
    background-color: var(--bg1);
}

.contact .row .map {
    flex: 1 1 45rem;
    width: 100%;
    object-fit: cover;
}

.contact .row form {
    flex: 1 1 45rem;
    text-align: center;
    padding: 5rem 2rem;
}

.contact .row form .input-group {
    display: flex;
    align-items: center;
    margin-top: 1rem;
    background-color: var(--bg);
    border: 1px solid var(--abu);
    padding-left: 2rem;
}
.contact .row form .input-group input {
    width: 100%;
    padding: 1rem;
    font-size: 1.2rem;
    background: none;
    color: var(--abu);
}

.contact .row form .btn {
    margin-top: 3rem;
    padding: 0.8rem 3.5rem;
    font-size: 1.2rem;
    font-weight: 500;
    color: white;
    border-radius: 5px;
}

.contact .row form i {
    color: var(--abu);
}

footer {
    background-color: var(--abu);
    text-align: center;
    padding: 1rem 5em;
    margin-top: 3rem;
    display: flex;
    justify-content: space-between;
}

.social a{
    color: white;
    padding: 0 0.5rem;
}
.social a:hover{
    color: gray;
}
.copyright a:hover{
    color: gray;
}

.copyright a{
    color:white;
}
/* Media Queries */

/* Tablet */

@media (max-width: 700px) {
    html {
        font-size: 75%;
    }

    #menu {
        display: inline-block;
    }
    .navbar .navbar-list {
        position: absolute;
        top: 100%;
        right: -100%;
        background-color: var(--abu);
        width: 30rem;
        height: 100vh;
        transition: 0.3s;
    }

    .navbar .navbar-list.active{
        right: 0;
    }

    .navbar .navbar-list a {
        display: block;
        margin: 1.5rem;
        padding: 0.5rem;
        text-align: center;
        color: white;
    }

    .main-section .content .btn{
        display: block;
        text-align: center;
    }

    .about .row {
        flex-wrap: wrap;
    }

    .about .row .about-img img {
        object-fit: cover;
        object-position: center;
    }
    .about .row .content h3 {
        margin-top: 2rem;
        font-size: 2rem;
    }

    .about .row .content p {
        font-size: 1.2rem;
    }
    .list-section{
        padding: 7rem 2rem;
    }
    .list-section h2{
        font-size: 4em;
    }
    .list-section .box-container .box h3{
        font-size: 3rem;
    }
    .list-section .box-container .box p{
        font-size: 1.2rem;
    }
    .list-section .box-container .box a{
        font-size: 1.5rem;
    }
    .feature {
        padding: 7rem 3rem;
    }
    .feature .row h3 {
        font-size: 2rem;
        font-weight: 700;
    }
    
    .feature .row p {
        padding: 0 5rem;
        font-size: 1.5rem;
    }
    .feature .box-container .box i {
        font-size: 5rem;
    }
    .feature .box-container .box h3 {
        font-size: 2rem;
    }
    
    .feature .box-container .box p {
        font-size: 1.5rem;
    }
    
    .feature .box-container .box{
        text-align: left;
        padding: 3rem 1rem;
    }
    .contact h2 {
        font-size: 4rem;
    }
    .contact p {
        font-size: 1.5rem;
    }
    .contact .row {
        flex-wrap: wrap;
    }
    .contact .row .map{
        height: 30rem;
    }
    .contact .row form {
        padding-top: 0;
    }
    footer {
        padding: 2rem 5rem;
    }
    .social {
        font-size: 1.5rem;
    }
    .copyright {
        font-size: 1.5rem;
    }
}
/* Mobile Phone */

@media (max-width: 450px) {
    html {
        font-size: 75%;
    }

}

